deployment/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hellonode
  labels:
    app: hellonode
spec:
  selector:
    matchLabels:
      app: hellonode
  replicas: 1
  template:
    metadata:
      name: hellonode
      labels:
        app: hellonode
    spec:
      containers:
        - name: hellonode
          image: docker.io/woorihan/cicd-nodejs-sample
          imagePullPolicy: Always
          ports:
            - name: port1
              containerPort: 8081
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1024Mi

---

apiVersion: v1
kind: Service
metadata:
  name: hellonode
spec:
  type: ClusterIP
  selector:
    app: hellonode
  ports:
    - name: hellonode
      port: 8090
      targetPort: 8081

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hellonode
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: hellonode-u25.165.192.105.60.nip.io
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: hellonode
                port: 
                  number: 8090
